# rag_assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  cache.py  chunking.py  config.py  db.py  embeddings.py  ingestion.py  llm.py  main.py  models.py  rag.py  rerank.py  retrieval.py  schemas.py  tokens.py
app/routers/: documents.py  query.py
sample_docs/: pgvector.md  rag.md
scripts/: ingest_cli.py
tests/: test_api.py  test_chunking.py  test_rerank.py  test_tokens.py
